//protocol=10531;
option java_package = "com.chuangyou.common.protobuf.pb.task";
option java_outer_classname = "TaskSetFailReqProto";

//任务操作
message TaskSetFailReqMsg {
	required int32 taskId = 1;
}